Fix board row card overlap. Add place card sound to muster ability

--- a/src/assets/game-board.css
+++ b/src/assets/game-board.css
@@ -272,7 +272,8 @@
 }
 
 .card-container {
-  flex: 1 1;
+  width: 100%;
+  min-width: 0;
   display: flex;
   justify-content: center;
   background-position: center;
